--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1392,12 +1392,16 @@
           <verstretch>1</verstretch>
          </sizepolicy>
         </property>
+        <property name="font">
+         <font>
+          <pointsize>13</pointsize>
+         </font>
+        </property>
         <property name="readOnly">
          <bool>true</bool>
         </property>
         <property name="plainText">
-         <string>Created by eyegak.
-Challenge Mode Needs Review</string>
+         <string>Created by eyegak</string>
         </property>
        </widget>
       </item>
